Archive2/c1/93ed779c0148e3/output
main.cpp:17:20: warning: static_assert with no message is a C++1z extension [-Wc++1z-extensions]
    static_assert(0);
                   ^
                   , ""
main.cpp:17:5: error: static_assert failed
    static_assert(0);
    ^             ~
1 warning and 1 error generated.
